melhorando a clareza do código, separando responsabilidades

--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
 
   <body>
     <script src="sketch.js"></script>
+    <script src="imagens.js"></script>
+    <script src="atriz.js"></script>
+    <script src="carro.js"></script>
   </body>
 </html>
